# c0rtex

./: .env.example  LICENSE  README.md  requirements.txt
display/: gpu_monitor.py  ollama_monitor.py  server.py
display/static/: index.html
scripts/: c0rtex.py  c0rtex_briefing.py  c0rtex_cron.py  c0rtex_deadlines.py  c0rtex_digest.py  c0rtex_gradio.py  c0rtex_log.py  c0rtex_matrix.py  c0rtex_paths.py  c0rtex_pinchtab.py  c0rtex_ponder.py  c0rtex_tools.py  c0rtex_tui.py  c0rtex_web.py  setup.py
scripts/pinchtab/: .dockerignore  .gitignore  .goreleaser.yml  .markdownlint.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  README.md  RELEASE.md  SECURITY.md  TESTING.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  go.mod  go.sum  install.sh  pdev
scripts/pinchtab/dashboard/: eslint.config.js  package.json  tygo.yaml
scripts/pinchtab/docs/: core-concepts.md  dashboard.md  get-started.md  headless-vs-headed.md  index.json  pinchtab.md  showcase.md
scripts/pinchtab/npm/: .eslintrc.json  .npmignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
scripts/pinchtab/plugin/: README.md  index.ts  openclaw.plugin.json
scripts/pinchtab/plugins/pinchtab/: README.md  cli.py  pyproject.toml  requirements.txt
scripts/pinchtab/plugins/pinchtab/tests/: __init__.py  conftest.py  test_plugin_functional.py  test_smcp_compat.py
templates/: base.html  conversations.html  digest.html  digests.html  index.html  logs.html  oura.html  pondering.html  ponderings.html  signal.html
(+187 files in other folders)
