[build-system]
requires = []
build-backend = "setuptools.build_meta"

[project]
name = "pinchtab-smcp-plugin"
version = "0.1.0"
description = "SMCP plugin for PinchTab browser control API"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
